<resources>
    <string name="app_name">Maktab7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task_comment">You Don\'t Have Any Task.</string>
    <string name="label_create">New Task</string>

    <string name="creation_title">Please Enter Task Title</string>
    <string name="creation_description">Write your description</string>
    <string name="creation_date">Select date and time</string>
    <string name="creation_btn_text">Done</string>
    <string name="task_saved_message">Task Successfully Saved</string>

    <string name="login_alertDlg">WRONG ENTRY!</string>
    <string name="confirmPass_alertDlg">CHECK YOUR PASSWORD</string>
    <string name="field_isEmpty">EMPTY FIELDS!</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="date">DATE:</string>
    <string name="titleHint">Your Title</string>
    <string name="descriptionHint">Your Description</string>
    <string name="edit_btn">EDIT</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="OK_btn">BACK</string>
    <string name="delete_all">DELETE ALL</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_guest">GUEST</string>

    <string name="login_nameTxt">Please Enter Your Name:</string>
    <string name="login_nameTxtHint">Enter Your Name</string>
    <string name="login_EmailTxt">Email Address:</string>
    <string name="login_emailTxtHint">Enter Your E-mail Address</string>
    <string name="login_passTxt">Password:</string>
    <string name="login_passTxtAgn">Confirm Password:</string>
    <string name="login_passTxtHint">Enter Your Password</string>
    <string name="login_passTxtHintAgn">Confirm Your Password</string>
    <string name="submit_button">SUBMIT</string>
    <string name="done_task">Task is done</string>

    <string name="task_isDone">TASK IS DONE</string>
    <string name="task_notDone">TASK IS NOT DONE</string>

</resources>
