<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".controller.TaskCreationFragment">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/creation_title" />
    <EditText
        android:id="@+id/creation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creation_description" />
    <EditText
        android:id="@+id/creation_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creation_date" />

    <Button
        android:id="@+id/creation_btn_create"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/creation_btn_text"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>