<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:minWidth="1000dp"
        android:minHeight="450dp"
        tools:context=".controller.RealEditTaskFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/editReal_title"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_bottom_curv_gray"
            android:hint="@string/titleHint"
            android:inputType="textCapCharacters" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/editReal_desc"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_bottom_curv_gray"
            android:hint="@string/descriptionHint"
            android:inputType="textMultiLine" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date:"
            style="?android:listSeparatorTextViewStyle"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/realFragDate_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginRight="8dp"
                android:hint="2019-10-23"/>
            <TextView
                android:id="@+id/realFragDate_btn_edit"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Time:"
            style="?android:listSeparatorTextViewStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/realFragTime_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginRight="8dp"
                android:hint="12:45 pm"/>
            <TextView
                android:id="@+id/realFragTime_btn_edit"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn"/>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/realFragDate_submitBtn"
            android:background="@color/colorAccent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white"
            android:text="@string/submit_button"
            android:layout_gravity="right"/>
        <TextView
            android:id="@+id/realFragTime_btn_cancel"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn"/>
    </LinearLayout>
</ScrollView>